# data-science-casebook

./: .gitignore  ASSESSMENT_RUBRIC.md  ASSESSMENT_RUBRIC.pl.md  CHANGELOG.md  CHANGELOG.pl.md  CONTRIBUTING.md  CONTRIBUTING.pl.md  INSTRUCTOR_GUIDE.md  INSTRUCTOR_GUIDE.pl.md  README.md  README.pl.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  translation_issue.yml
.github/workflows/: ci.yml
cases/capstone/: README.md  README.pl.md
cases/capstone/data/: clinic_wait_times.csv  generate.py  lendwell_loan_default.csv  retail_store_segments.csv
cases/capstone/lessons/01_defining_the_question/: README.md  README.pl.md  check.py  lesson.ipynb  solution.py  task.py
cases/capstone/lessons/02_data_preparation/: README.md  README.pl.md  check.py  lesson.ipynb  solution.py  task.py
cases/capstone/lessons/03_exploration/: README.md  README.pl.md  check.py  lesson.ipynb  solution.py  task.py
cases/capstone/lessons/04_modeling/: README.md  README.pl.md  check.py  lesson.ipynb  solution.py  task.py
cases/capstone/lessons/05_evaluation/: README.md  README.pl.md  check.py  lesson.ipynb  solution.py  task.py
cases/case_1_regression/: README.md  README.pl.md
cases/case_1_regression/data/: generate.py  transport_delays.csv
cases/case_2_classification/: README.md  README.pl.md
cases/case_2_classification/data/: generate.py  orders.xlsx
cases/case_3_clustering/: README.md  README.pl.md
cases/case_3_clustering/data/: aurora_stream.sqlite  generate.py
tools/: check_bilingual_pairs.py  run_notebooks.py
(+170 files in other folders)
